Fixed file locations

--- a/raylib_template.vcxproj.filters
+++ b/raylib_template.vcxproj.filters
@@ -18,15 +18,15 @@
     <ClCompile Include="Source\main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Player.cpp">
+    <ClCompile Include="Source\Player.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Level.cpp">
+    <ClCompile Include="Source\Level.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Level.h">
+    <ClInclude Include="Source\Level.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
