Jiff 2 with Enemy start
by livothestivo

--- a/raylib_template.vcxproj.filters
+++ b/raylib_template.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="Source\Level.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Enemy.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Level.h">
