--- a/raylib_template.vcxproj
+++ b/raylib_template.vcxproj
@@ -162,6 +162,7 @@
     <ClCompile Include="Source\Level.cpp" />
     <ClCompile Include="Source\main.cpp" />
     <ClCompile Include="Source\Player.cpp" />
+    <ClCompile Include="Source\Enemy.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Level.h" />
