--- a/raylib_template.vcxproj
+++ b/raylib_template.vcxproj
@@ -162,10 +162,10 @@
     <ClCompile Include="Source\Level.cpp" />
     <ClCompile Include="Source\main.cpp" />
     <ClCompile Include="Source\Player.cpp" />
-    <ClCompile Include="Source\Enemy.cpp" />
+    <ClCompile Include="Source\Asteroid.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Source\Level.h" />
+    <ClInclude Include="Source\Classes.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
