--- a/raylib_template.vcxproj
+++ b/raylib_template.vcxproj
@@ -167,6 +167,9 @@
   <ItemGroup>
     <ClInclude Include="Source\Classes.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="Assets\Player.png" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
