--- a/raylib_template.vcxproj.filters
+++ b/raylib_template.vcxproj.filters
@@ -33,4 +33,9 @@
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="Assets\Player.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+  </ItemGroup>
 </Project>
